# Predictive-Maintainence-Motor-Fault-Detection-

./: .gitignore  Final2o.pintool  Final2o.slcp  Final2o.slps  audio_classifier.cc  mfcc_multiclass_inference.cc  mfcc_multiclass_inference.h  mfcc_multiclass_model_data.c  mfcc_multiclass_model_data.h  motor_pcm_buffer.c  motor_pcm_buffer.h  readme.md  vscode.conf
autogen/: gen.properties  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_tflite_micro_model.c  sl_tflite_micro_model_parameters.h  sl_tflite_micro_opcode_resolver.h
autogen/.slc_state/: .crc_config.crc
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
cmake_gcc/: CMakeLists.txt  CMakePresets.json  Final2o.cmake  Final2o_project.cmake  toolchain.cmake
config/: audio_classifier_config.h  sl_board_control_config.h  sl_iostream_eusart_vcom_config.h  sl_mic_i2s_config.h  sl_ml_audio_feature_generation_config.h  sl_mx25_flash_shutdown_eusart_config.h  sl_tflite_micro_config.h
config/tflite/: slc_args.json
docs/: system_architecture.md
